Add prettier code formatter and script

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,10 @@
- a, a:hover, a:focus, a:active {
-      text-decoration: none;
-      color: inherit;
- }
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
 
 p {
   margin: 0;
