--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+html, body {
+  font-size: 16px;
+}
+
 a,
 a:hover,
 a:focus,
@@ -7,5 +11,9 @@ a:active {
 }
 
 p {
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
