--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,5 @@
-html,
-body {
-  font-size: 14px;
-  @media screen and (min-width: 460px) {
-    font-size: 16px;
-  }
-  @media screen and (min-width: 640px) {
-    font-size: 16px;
-  }
-  @media screen and (min-width: 768px) {
-    font-size: 16px;
-  }
-  @media screen and (min-width: 1024px) {
-    font-size: 16px;
-  }
+html {
+  font-size: 16px;
 }
 
 a,
