--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@ html {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
 }
 
 a,
