--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 html {
   font-size: 16px;
-  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
 }
@@ -31,4 +31,8 @@ button {
   background: none;
   border: none;
   padding: 0;
+}
+
+li {
+  margin-bottom: 8px;
 }
