add Tag component

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,6 @@
 html {
   font-size: 16px;
-  -webkit-font-smoothing: subpixel-antialiased;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
 }
