--- a/styles/global.css
+++ b/styles/global.css
@@ -2,7 +2,9 @@
 1. Use a more-intuitive box-sizing model. 
 */
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -17,7 +19,9 @@
 3. Allow percentage-based heights in the application
 */
 
-html, body, #__next  {
+html,
+body,
+#__next {
   height: 100%;
   font-size: 16px;
   overscroll-behavior-y: none;
@@ -38,7 +42,11 @@ body {
 /*
   6. Improve media defaults
 */
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
@@ -46,21 +54,30 @@ img, picture, video, canvas, svg {
 /*
   7. Remove built-in form typography styles
 */
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
 
 /*
   8. Avoid text overflows
 */
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
 
-#root, #__next {
+#root,
+#__next {
   isolation: isolate;
 }
-
 
 a,
 a:hover,
@@ -80,4 +97,3 @@ button {
 li {
   margin-bottom: 8px;
 }
-
