--- a/styles/global.css
+++ b/styles/global.css
@@ -97,3 +97,8 @@ button {
 li {
   margin-bottom: 8px;
 }
+
+/*Hide scrollbar command menu*/
+#kbar-listbox::-webkit-scrollbar {
+  display: none;
+}
