update styling of CMDK component

--- a/styles/cmdk/vercel.css
+++ b/styles/cmdk/vercel.css
@@ -1,18 +1,18 @@
-  [cmdk-root] {
-    max-width: 640px;
-    width: 100%;
-    padding: 8px;
-    background: #ffffff;
-    border-radius: 12px;
-    overflow: hidden;
-    font-family: var(--font-sans);
-    border: 1px solid var(--gray6);
-    box-shadow: var(--cmdk-shadow);
-    transition: transform 100ms ease;
+[cmdk-root] {
+  max-width: 640px;
+  width: 100%;
+  padding: 8px;
+  background: #ffffff;
+  border-radius: 12px;
+  overflow: hidden;
+  font-family: var(--font-sans);
+  border: 1px solid var(--gray6);
+  box-shadow: var(--cmdk-shadow);
+  transition: transform 100ms ease;
 
-    .dark & {
-      background: rgba(22, 22, 22, 0.7);
-    }
+  .dark & {
+    background: rgba(22, 22, 22, 0.7);
+  }
 
   [cmdk-input] {
     font-family: var(--font-sans);
@@ -64,12 +64,12 @@
     transition: all 150ms ease;
     transition-property: none;
 
-    &[aria-selected='true'] {
+    &[aria-selected="true"] {
       background: var(--grayA3);
       color: var(--gray12);
     }
 
-    &[aria-disabled='true'] {
+    &[aria-disabled="true"] {
       color: var(--gray8);
       cursor: not-allowed;
     }
