--- a/styles/global.css
+++ b/styles/global.css
@@ -23,7 +23,7 @@ html,
 body,
 #__next {
   height: 100%;
-  font-size: 16px;
+  font-size: 15px;
   overscroll-behavior-y: none;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
@@ -86,6 +86,7 @@ a:active {
   text-decoration: none;
   color: inherit;
   border: none;
+  outline: 0 !important;
 }
 
 button {
