--- a/styles/global.css
+++ b/styles/global.css
@@ -25,6 +25,7 @@ body,
   height: 100%;
   font-size: 16px;
   overscroll-behavior-y: none;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
 }
